--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -7,7 +7,7 @@
 
 
     <!-- link css interno -->
-     <link rel="stylesheet" href="{{ url_for('static', filename='style/style.css') }}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='style/style-pagina_inicial.css') }}">
 
      
 </head>
