LINKANDO OS CSS ATRAVES DO JINJA

--- a/templates/Pagina_cadastrar.html
+++ b/templates/Pagina_cadastrar.html
@@ -6,7 +6,7 @@
     <title>ZCG-GAME-STORE</title>
 
     <!-- link css interno -->
-    <link rel="stylesheet" href="{{ url_for('', filename='') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_cadastrar.css') }}">
 </head>
 <body>
     
