--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -5,13 +5,295 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZCG-GAME-STORE</title>
 
+    <!-- links externo -->
 
-    <!-- link css interno -->
-     <link rel="stylesheet" href="{{ url_for('static', filename='style/style-pagina_inicial.css') }}">
+        <!-- Link CSS Bootstrap via CDN -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
-     
+        <!-- Link CSS Bootstrap via CDN -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+        <!-- Link JS Bootstrap via CDN -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
+
+
+    <!-- links interno -->
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='style/style-pagina_inicial.css') }}">
+
 </head>
 <body>
     
+<nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+
+    <div class="container-fluid">
+
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
+
+            <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
+                <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
+            </ul>
+            
+        </div>
+
+        <img src="" alt="">
+        <a class="navbar-brand">ZCG Game Store</a>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+        </form>
+
+        <a href="#"><i class="bi bi-cart-plus"></i></a>
+
+        <div class="btn-group dropstart">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">My Accont</a></li>
+                <li><a class="dropdown-item" href="#">Login/Register</a></li>
+                <li><a class="dropdown-item" href="#">Logout</a></li>
+            </ul>
+        </div>
+
+    </div>
+
+
+</nav>
+
+<main>
+
+    <section class="main__games-carousel">
+
+        <h2>Jogos em Destaque</h2>
+
+        <div class="main__games-carousel-container">
+
+            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel"        data-bs-interval="3000">
+
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+                <div class="carousel-item">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+                <div class="carousel-item">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+
+            </button>
+
+        </div>
+
+        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel"        data-bs-interval="3000">
+
+            <div class="carousel-inner">
+
+                <div class="carousel-item active">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+                <div class="carousel-item">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+                <div class="carousel-item">
+
+                    <!-- A img abaixo é para uma foto de jogo em destaque -->
+                    <img src="" class="d-block w-100" alt="">
+
+                </div>
+
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+
+            </button>
+
+        </div>
+
+        </div>
+
+    </section>
+
+
+    <section class="main__games">
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="main__games">
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+        <div class="card" style="width: 18rem;">
+
+            <!-- A img abaixo é para uma foto de jogo -->
+            <img src="" class="card-img-top" alt="">
+
+            <div class="card-body">
+
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit similique laudantium cumque repudiandae aliquam vitae ex facere.</p>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+</main>
+
+
+
+<footer class="footer">
+        
+    <span>@ ZCG GAME STORE 2025. Muitos direitos Reservados</span>
+
+    <form class="footer__social">
+
+        <a href="https://www.facebook.com/?locale=pt_BR"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+        <a href="https://br.linkedin.com/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/"><i class="bi bi-twitter-x"></i></a>
+
+    </form>
+
+</footer>
+
 </body>
 </html>
