modify: classe adicionada para não haver conflitos entre os carrosseis, img adicionada para ser visto de forma mais clara o html.

--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -71,28 +71,28 @@
 
         <div class="main__games-carousel-container">
 
-            <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel"        data-bs-interval="3000">
+            <div id="carouselExampleRide" class="carousel slide main__games-carousel-item" data-bs-ride="carousel"        data-bs-interval="3000">
 
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
                 <div class="carousel-item">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
                 <div class="carousel-item">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
@@ -114,28 +114,28 @@
 
         </div>
 
-        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="carousel"        data-bs-interval="3000">
+        <div id="carouselExampleRide" class="carousel slide main__games-carousel-item" data-bs-ride="carousel"        data-bs-interval="3000">
 
             <div class="carousel-inner">
 
                 <div class="carousel-item active">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
                 <div class="carousel-item">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
                 <div class="carousel-item">
 
                     <!-- A img abaixo é para uma foto de jogo em destaque -->
-                    <img src="" class="d-block w-100" alt="">
+                    <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="d-block w-100" alt="">
 
                 </div>
 
@@ -155,7 +155,7 @@
 
             </button>
 
-        </div>
+            </div>
 
         </div>
 
@@ -167,7 +167,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -180,7 +180,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -193,7 +193,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -206,7 +206,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -223,7 +223,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -236,7 +236,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -249,7 +249,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
@@ -262,7 +262,7 @@
         <div class="card" style="width: 18rem;">
 
             <!-- A img abaixo é para uma foto de jogo -->
-            <img src="" class="card-img-top" alt="">
+            <img src="https://img.freepik.com/fotos-premium/foto-de-grande-angular-de-uma-unica-arvore-crescendo-sob-um-ceu-nublado-durante-um-por-do-sol-cercado-por-grama_181624-22807.jpg?semt=ais_items_boosted&w=740" class="card-img-top" alt="">
 
             <div class="card-body">
 
