--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -84,14 +84,18 @@ a
 .main__games
 {
     width: 90%;
-    height: 400px;
+    height: 100%;
 
     margin: 20px auto;
 
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+
+    gap: 16px;
+    padding: 16px;
+
+    flex-wrap: wrap;
 
     border: 1px solid black;
     border-radius: 10px;
@@ -132,4 +136,27 @@ a
 .footer__social a
 {
     font-size: 20px;
+}
+
+
+
+
+
+
+
+
+/* ageitando o tamanho das imagens do jogo no html (adrian)*/
+
+.img-jogo{
+    width: 100%;
+    height: 180px;
+
+    border-top: 15px;
+}
+
+.container-sobre-jogo{
+    height: 275px;
+    width: 100%;
+
+    text-align: center;
 }
