modify: desativando cursor pointer das setas do carrossel

--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -81,6 +81,13 @@ a
     border-radius: 10px;
 }
 
+/* Classes do carrocel do bootstrap */
+.carousel-control-prev,
+.carousel-control-next
+{
+    pointer-events: none;
+}
+
 .main__games
 {
     width: 90%;
