--- a/templates/Pagina_cadastrar.html
+++ b/templates/Pagina_cadastrar.html
@@ -101,6 +101,8 @@
 
             <button type="submit" class="button-entrar">Cadastrar</button>
 
+            <a href="/login">Já tem uma conta? Clique aqui!</a>
+
 
         </form>
 
