--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -57,9 +57,9 @@
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="bi bi-person-circle"></i></button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">My Accont</a></li>
-                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" href="/perfil-usuario">My Accont</a></li>
+                    <li><a class="dropdown-item" href="/cadastro">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
                 </ul>
             </div>
 
