--- a/templates/Pagina_logar.html
+++ b/templates/Pagina_logar.html
@@ -63,8 +63,8 @@
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">My Accont</a></li>
-                <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a class="dropdown-item" href="/">Login/Register</a></li>
+                <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
             </ul>
         </div>
 
@@ -94,6 +94,8 @@
             <input name="senha" type="password" placeholder="Senha" class="form__input" required>
 
             <button type="submit" class="button-entrar">Entrar</button>
+
+            <a href="/cadastro">Não tem uma conta? Clique aqui!</a>
             
         </form>
 
