--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -139,6 +139,9 @@
                     <br>
                     <h6>Categoria: {{jogo.categoria}}</h6>
 
+                    <!-- Aqui vai o link para ver o produto -->
+                    <button><a href="">Ver</a></button>
+
                 </div>
 
             </div>
