ADD: HTML NOVO | CSS NOVO | ROTA NOVA | FUNÇÃO DO DEF NOVA / "MY PROFILE" ESTA RETORNANDO O NOME E O EMAIL CADASTRADOS

--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -49,15 +49,15 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
 
             <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
+                <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
             </ul>
             
         </div>
 
         <img src="" alt="">
-        <a class="navbar-brand">ZCG Game Store</a>
+        <a class="navbar-brand" href="/">ZCG Game Store</a>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
