--- a/templates/Pagina_perfil-usuario.html
+++ b/templates/Pagina_perfil-usuario.html
@@ -34,15 +34,15 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-list"></i></button>
 
             <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a class="dropdown-item active" href="#"><i class="bi bi-house-door-fill"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-bookmark"></i></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-question-circle"></i></a></li>
+                <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
             </ul>
             
         </div>
 
         <img src="" alt="">
-        <a class="navbar-brand">ZCG Game Store</a>
+        <a class="navbar-brand" href="/">ZCG Game Store</a>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
@@ -53,9 +53,9 @@
         <div class="btn-group dropstart">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-person-circle"></i></button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">My Accont</a></li>
-                <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a class="dropdown-item" href="/perfil-usuario">My Accont</a></li>
+                <li><a class="dropdown-item" href="/login">Login/Register</a></li>
+                <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
             </ul>
         </div>
 
@@ -71,18 +71,17 @@
 
             <figure>
 
-                <img src="" alt="">
+                <img src="../static/img/foto-usuario.jpg" alt="FOTO-PERFIL">
 
             </figure>
 
 
             <form>
 
-                <span>NOME DO USUARIO</span>
+                <span>NOME DO USUARIO: {{session["nome_usuario"]}}</span>
                 
-                <span>EMAIL DO USUARIO</span>
+                <span>EMAIL DO USUARIO: {{session["Usuario"]}}</span>
                 
-                <span>SENHA DO USUARIO</span>
 
             </form>
 
