add: mostrar a imagem nome e descrição do jogo na pagina de compra do produto

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -66,13 +66,14 @@
 
     <section class="main__produto">
 
-        <img src="" alt="">
+        <img src="{{produto.url}}">
+
 
         <div class="main__produto-detalhes">
 
             <form class="main__produto-detalhes-nome">
 
-                <p>Nome do  Produto</p>
+                <h1>{{produto.nome_jogo}}</h1>
 
             </form>
 
@@ -80,6 +81,7 @@
             <form class="main__produto-detalhes-descricao">
 
                 <p>Descrição do Produto</p>
+                <h2>{{produto.descricao_jogo}}</h2>
 
             </form>
 
