--- a/templates/Pagina_inicial.html
+++ b/templates/Pagina_inicial.html
@@ -141,7 +141,7 @@
                     <h6>Categoria: {{jogo.categoria}}</h6>
 
                     <!-- Aqui vai o link para ver o produto -->
-                    <button><a href="">Ver</a></button>
+                    <button><a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a></button>
 
                 </div>
 
