add: link do css das cores da pagina

--- a/templates/Pagina_categoria-jogos.html
+++ b/templates/Pagina_categoria-jogos.html
@@ -21,6 +21,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_categoria_jogos.css') }}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
 
 </head>
 <body>
