add: link das cores do css da pagina

--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -37,6 +37,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_carrinho.css') }}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
 
 </head>
 <body>
