--- a/templates/Pagina_cadastrar.html
+++ b/templates/Pagina_cadastrar.html
@@ -25,6 +25,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_cadastrar.css') }}">
+        <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
 
 </head>
 <body>
