--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -93,7 +93,7 @@ a
     align-items: center;
     gap: 20px;
 
-    border: 1px solid var(--preto);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -146,7 +146,7 @@ a
 
 .main__games
 {
-    width: 90%;
+    width: 100%;
     height: 100%;
 
     margin: 20px auto;
@@ -166,6 +166,8 @@ a
 /* Cards de jogos */
 .card
 {
+    width: 300px;
+    height: 600px;
 
     margin: 10px;
 
@@ -174,6 +176,13 @@ a
     background-color: var(--cinza_escuro);
     border: 1px solid var(--cinza_claro);
     border-radius: 12px;
+
+    transition: 1s;
+}
+
+.card:hover
+{
+    height: 640px;
 }
 
 /* ageitando o tamanho das imagens do jogo no html (adrian)*/
@@ -185,11 +194,23 @@ a
 
     border-radius: 12px 12px 0 0;
     border-top: 15px;
+
+    transition: 0.5s;
+}
+
+.card:hover > .img-jogo
+{
+    height: 200px;
 }
 
 .container-sobre-jogo{
+    width: 300px;
     height: 350px;
-    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     text-align: center;
 }
@@ -261,43 +282,4 @@ a
 .footer__social a
 {
     font-size: 20px;
-}
-
-
-
-
-
-
-
-
-/* ageitando o tamanho das imagens do jogo no html (adrian)*/
-
-.img-jogo{
-    width: 100%;
-    height: 180px;
-
-    border-top: 15px;
-}
-
-.container-sobre-jogo{
-    height: 350px;
-    width: 100%;
-
-    text-align: center;
-}
-
-.container-sobre-jogo button
-{
-    width: 100px;
-    height: 50px;
-
-    margin-top: 20px;
-
-    border: 1px solid black;
-    border-radius: 10px;
-}
-
-.container-sobre-jogo button > a
-{
-    color: black;
 }
