--- a/static/styles/style-pagina_apresentacao.css
+++ b/static/styles/style-pagina_apresentacao.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
 }
 
+body
+{
+    background-color: var(--preto);
+    color: var(--branco);
+}
+
 
 /* Formatando todos os botões para um padrão */
 button
@@ -26,7 +32,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -49,7 +55,8 @@ a
     justify-content: space-between;
     align-items: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
 }
 
 
@@ -81,7 +88,7 @@ a
 
     margin-left: 20px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -99,7 +106,7 @@ a
     justify-content: center;
     gap: 40px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px 0 0 10px;
 }
 
@@ -122,7 +129,7 @@ a
 
     padding: 10px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 0 10px 10px 0;
 }
 
@@ -152,14 +159,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span    
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
