--- a/static/styles/style-pagina_categoria_jogos.css
+++ b/static/styles/style-pagina_categoria_jogos.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
 }
 
+/* Corpo geral */
+body 
+{
+    background-color: var(--preto);
+    color: var(--branco);
+}
 
 /* Formatando todos os botões para um padrão */
 button
@@ -26,7 +32,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -35,9 +41,11 @@ a
     width: 1400px;
     height: 750px;
 
-    margin: 20px auto;
+    margin: 100px auto;
+    margin-bottom: 50px;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -50,7 +58,7 @@ a
 
     text-align: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-top: 0;
     border-left: 0;
     border-right: 0;
@@ -65,13 +73,15 @@ a
 
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
 }
 
 .main__category-container button
 {
-    width: 300px;
-    height: 300px;
+    width: 280px;
+    height: 280px;
 
     padding: 120px;
 
@@ -80,13 +90,21 @@ a
     text-align: center;
     gap: 20px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
+
+    transition: 0.5s;
+}
+
+.main__category-container button:hover
+{
+    width: 300px;
+    height: 300px;
 }
 
 .main__category-container a
 {
-    color: black;
+    color: var(--cinza_claro);
 }
 
 
@@ -103,14 +121,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
