--- a/static/styles/style-pagina_comprar_produtos.css
+++ b/static/styles/style-pagina_comprar_produtos.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+body
+{
+    background-color: var(--preto);
+    color: var(--branco);
+}
 
 /* Formatando todos os botões para um padrão */
 button
@@ -26,8 +31,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    font-size: 30px;
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -63,7 +67,8 @@ a
 
     margin-right: 20px;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -78,6 +83,7 @@ a
     flex-direction: column;
     align-items: center;
     gap: 50px;
+    
 }
 
 .main__produto-detalhes-nome
@@ -89,7 +95,8 @@ a
 
     text-align: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -102,7 +109,8 @@ a
 
     text-align: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -117,7 +125,8 @@ a
     align-items: center;
 }
 
-.main__produto-compra button
+.main__produto-compra-comprar,
+.main__produto-compra-termos
 {
     width: 200px;
     height: 100px;
@@ -126,8 +135,39 @@ a
 
     text-align: center;
 
-    border: 1px solid black;
     border-radius: 10px;
+}
+
+.main__produto-compra-comprar
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--verde_claro);
+
+    transition: 0.5s;
+}
+
+.main__produto-compra-comprar:hover
+{
+    color: var(--preto);
+    background-color: var(--verde_claro);
+    border: 1px solid var(--branco);
+}
+
+.main__produto-compra-termos
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--azul_claro);
+
+    transition: 0.5s;
+}
+
+.main__produto-compra-termos:hover
+{
+    color: var(--preto);
+    background-color: var(--azul_claro);
+    border: 1px solid var(--branco);
 }
 
 
@@ -142,8 +182,6 @@ a
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-
-    border-top: 1px solid black;
 }
 
 .main__comentario-container,
@@ -159,7 +197,8 @@ a
     justify-content: center;
     align-items: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -185,7 +224,7 @@ a
 
     padding: 20px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -203,13 +242,46 @@ a
     gap: 50px;
 }
 
-.main__comentario-container-button button
+.main__comentario-container-button-publicar,
+.main__comentario-container-button-limpar
 {
     width: 200px;
     height: 60px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
+}
+
+.main__comentario-container-button-publicar
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--verde_claro);
+
+    transition: 0.5s;
+}
+
+.main__comentario-container-button-publicar:hover
+{
+    color: var(--preto);
+    background-color: var(--verde_claro);
+    border: 1px solid var(--branco);
+}
+
+.main__comentario-container-button-limpar
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--vermelho);
+
+    transition: 0.5s;
+}
+
+.main__comentario-container-button-limpar:hover
+{
+    color: var(--preto);
+    background-color: var(--vermelho);
+    border: 1px solid var(--branco);
 }
 
 .main__chat-container
@@ -228,7 +300,7 @@ a
 
     margin-top: 20px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-bottom: 0px;
 }
 
@@ -239,7 +311,7 @@ a
     height: 150px;
     min-height: 100px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
 }
 
 
@@ -256,14 +328,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span    
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
