modify: css da pagina do perfil do usuario

--- a/static/styles/style-pagina_perfil_usuario.css
+++ b/static/styles/style-pagina_perfil_usuario.css
@@ -6,6 +6,13 @@
     box-sizing: border-box;
 }
 
+/* Corpo geral */
+body 
+{
+    background-color: var(--preto);
+    color: var(--branco);
+}
+
 /* Formatando todos os botões para um padrão */
 button
 {
@@ -25,7 +32,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -58,8 +65,9 @@ a
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    border: 1px solid black;
+    
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -89,7 +97,7 @@ a
     align-items: start;
     gap: 40px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -100,7 +108,7 @@ a
     
     margin: auto 10px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -123,7 +131,8 @@ a
     justify-content: center;
     align-items: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -155,7 +164,7 @@ a
     align-items: center;
     gap: 40px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px 0 0 10px;
 }
 
@@ -169,19 +178,36 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
-.main__historico-container ul > li > input,
-.main__historico-container ul > li > button
+.main__historico-container ul > li > input
 {
-    width: 60px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 
-    border: 1px solid black;
     border-radius: 5px;
 }
+
+.main__historico-container ul > li > button
+{
+    width: 80px;
+    height: 40px;
+
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--verde_claro);
+    border-radius: 5px;
+}
+
+.main__historico-container ul > li > button:hover
+{
+    color: var(--preto);
+    background-color: var(--verde_claro);
+    border: 1px solid var(--branco);
+}
+
 
 .main__historico-container img
 {
@@ -195,7 +221,7 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -212,14 +238,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
