--- a/static/styles/style-pagina_cadastrar.css
+++ b/static/styles/style-pagina_cadastrar.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+body
+{
+    background-color: var(--preto);
+    color: var(--branco);
+}
 
 /* Formatando todos os botões para um padrão */
 button
@@ -26,7 +31,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -42,8 +47,8 @@ a
     flex-direction: column;
     align-items: center;
 
-
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -73,14 +78,14 @@ a
     text-align: center;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
 .main__form-cadastro
 {
     width: 400px;
-    height:300px;
+    height:400px;
 
     display: flex;
     flex-direction: column;
@@ -88,7 +93,7 @@ a
     align-items: center;
     gap: 20px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -100,11 +105,30 @@ a
 
     text-align: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
+
+    transition: 0.5s;
 }
 
+.main__form-cadastro button
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--verde_claro);
+}
 
+.main__cadastro-login button:hover
+{
+    color: var(--preto);
+    background-color: var(--verde_claro);
+    border: 1px solid var(--branco);
+}
+
+.main__form-cadastro a
+{
+ all: revert;
+}
 
 .footer
 {
@@ -119,14 +143,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span    
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
