--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -147,7 +147,7 @@ a
 .main__games
 {
     width: 100%;
-    height: 100%;
+    height: 1400px;
 
     margin: 20px auto;
 
@@ -177,12 +177,12 @@ a
     border: 1px solid var(--cinza_claro);
     border-radius: 12px;
 
-    transition: 1s;
+    transition: 0.5s;
 }
 
 .card:hover
 {
-    height: 640px;
+    scale: 1.1; 
 }
 
 /* ageitando o tamanho das imagens do jogo no html (adrian)*/
@@ -194,16 +194,10 @@ a
 
     border-radius: 12px 12px 0 0;
     border-top: 15px;
-
-    transition: 0.5s;
 }
 
-.card:hover > .img-jogo
+.container-sobre-jogo
 {
-    height: 200px;
-}
-
-.container-sobre-jogo{
     width: 300px;
     height: 350px;
 
