modify: modificando classes dos botões

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -89,9 +89,9 @@
 
         <form class="main__produto-compra">
 
-            <button class="">Comprar</button>
+            <button class="main__produto-compra-comprar">Comprar</button>
 
-            <button>Termos de Compra</button>
+            <button class="main__produto-compra-termos">Termos de Compra</button>
         
         </form>
 
@@ -111,9 +111,9 @@
 
             <form  action="" class="main__comentario-container-button">
 
-                <button>Publicar</button>
+                <button class="main__comentario-container-button-publicar">Publicar</button>
                 
-                <button>Limpar</button>
+                <button class="main__comentario-container-button-limpar">Limpar</button>
 
             </form>
 
