modify: modificação dos botões da pagina de carrinho

--- a/static/styles/style-pagina_carrinho.css
+++ b/static/styles/style-pagina_carrinho.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
 }
 
+body
+{
+    color: var(--branco);
+    background-color: var(--preto);
+}
+
 /* Formatando todos os botões para um padrão */
 button
 {
@@ -25,7 +31,7 @@ li
 /* Formatando todos 'a' */
 a
 {
-    color: white;
+    color: var(--branco);
     text-decoration: none;
 }
 
@@ -57,7 +63,8 @@ a
     justify-content: center;
     align-items: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -88,7 +95,7 @@ a
     align-items: center;
     gap: 30px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px 0 0 10px;
 }
 
@@ -102,18 +109,38 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
 .main__produtos-container input,
 .main__produtos-container button
 {
-    width: 60px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 5px;
+}
+
+.main__produtos-container button
+{
+    width: 80px;
+    height: 40px;
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--vermelho);
+
+    transition: 0.5s;
+}
+
+.main__produtos-container button:hover
+{
+    color: var(--preto);
+    background-color: var(--vermelho);
+    border: 1px solid var(--branco);
+
+    scale: 1.1;
 }
 
 .main__produtos-container img
@@ -128,7 +155,7 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -144,7 +171,8 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    background-color: var(--cinza_escuro);
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
@@ -161,18 +189,55 @@ a
     justify-content: space-around;
     align-items: center;
 
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-radius: 10px;
 }
 
-.main__container-termos div > button
+.main__container-termos-button-comprar,
+.main__container-termos-button-cancelar
 {
     width: 200px;
     height: 50px;
 
-    border: 1px solid black;
     border-radius: 10px;
 }
+
+.main__container-termos-button-comprar
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--verde_claro);
+
+    transition: 0.5s;
+}
+
+.main__container-termos-button-comprar:hover
+{
+    color: var(--preto);
+    background-color: var(--verde_claro);
+    border: 1px solid var(--branco);
+
+    scale: 1.1;
+}
+
+.main__container-termos-button-cancelar
+{
+    color: var(--branco);
+    background-color: transparent;
+    border: 1px solid var(--vermelho);
+
+    transition: 0.5s;
+}
+
+.main__container-termos-button-cancelar:hover
+{
+    color: var(--preto);
+    background-color: var(--vermelho);
+    border: 1px solid var(--branco);
+
+    scale: 1.1;
+}
+
 
 .footer
 {
@@ -187,14 +252,14 @@ a
     align-items: center;
 
     background-color: #212529;
-    border: 1px solid black;
+    border: 1px solid var(--cinza_claro);
     border-left: 0;
     border-right: 0;
 }
 
 .footer span
 {
-    color: white;
+    color: var(--branco);
 }
 
 .footer__social
