--- a/templates/Pagina_busca.html
+++ b/templates/Pagina_busca.html
@@ -13,24 +13,125 @@
 </head>
 
 <body>
-    <h1>Resultados da busca para "{{ termo }}"</h1>
 
-    {% if jogos %}
-    <ul>
-        {% for jogo in jogos %}
-        <li>
-            <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="FOTO-JOGO">
-            <h3>{{ jogo.nome_jogo }}</h3>
-            <p>{{ jogo.descricao_jogo }}</p>
-            <p><strong>Preço:</strong> R$ {{ "%.2f"|format(jogo.preco) }}</p>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>Nenhum jogo encontrado.</p>
-    {% endif %}
+</body>
 
-    <a href="/">Voltar para a página inicial</a>
+</html>
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ZCG-GAME-STORE</title>
+
+    <!-- links externo -->
+
+    <!-- Link CSS Bootstrap via CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <!-- Link CSS Bootstrap via CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+    <!-- Link JS Bootstrap via CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
+
+
+    <!-- links interno -->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_inicial.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
+
+</head>
+
+<body>
+
+    <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+
+        <div class="container-fluid">
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false"><i class="bi bi-list"></i></button>
+
+                <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item active" href="/"><i class="bi bi-house-door-fill"></i></a></li>
+                    <li><a class="dropdown-item" href="/categoria-jogos"><i class="bi bi-bookmark"></i></a></li>
+                    <li><a class="dropdown-item" href="/apresentacao"><i class="bi bi-question-circle"></i></a></li>
+                </ul>
+
+            </div>
+
+            <img src="" alt="">
+            <a class="navbar-brand" href="/">ZCG Game Store</a>
+            <form class="d-flex" role="search" action="/buscar_jogos" method="GET">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q" />
+                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+            </form>
+
+            <a href="#"><i class="bi bi-cart-plus"></i></a>
+
+            <div class="btn-group dropstart">
+                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false"><i class="bi bi-person-circle"></i></button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/perfil-usuario">My Accont</a></li>
+                    <li><a class="dropdown-item" href="/cadastro">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+
+    </nav>
+
+    <main>
+            <h1>Resultados da busca para "{{ termo }}"</h1>
+
+            {% if jogos %}
+            <ul class="main__card">
+                {% for jogo in jogos %}
+                <li class="main_card-container">
+                    <img src="{{jogo.url}}" class="card-img-top img-jogo" alt="FOTO-JOGO">
+                    <h3>{{ jogo.nome_jogo }}</h3>
+                    <p>{{ jogo.descricao_jogo }}</p>
+                    <p><strong>Preço:</strong> R$ {{ "%.2f"|format(jogo.preco) }}</p>
+
+                    <button><a href="/comprar-produto/{{jogo.cod_jogo}}">Ver</a></button>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <p>Nenhum jogo encontrado.</p>
+            {% endif %}
+
+            <a href="/">Voltar para a página inicial</a>
+    </main>
+
+    <footer class="footer">
+
+        <span>@ ZCG GAME STORE 2025. Muitos direitos Reservados</span>
+
+        <form class="footer__social">
+
+            <a href="https://www.facebook.com/?locale=pt_BR"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+            <a href="https://br.linkedin.com/"><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/"><i class="bi bi-twitter-x"></i></a>
+
+        </form>
+
+    </footer>
+
 </body>
 
 </html>
