add: nova alteração no banco de dados e parte da exibição na interface

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -81,20 +81,18 @@
 
             <form class="main__produto-detalhes-descricao">
 
-                <p>Descrição do Produto</p>
-                <h2>{{produto.descricao_jogo}}</h2>
+                <h2>Descrição do Produto</h2>
+                <p>{{produto.descricao_jogo}}</p>
 
             </form>
 
         </div>
 
 
-        <form class="main__produto-compra">
+        <form class="main__produto-compra" action="/carrinho/{{produto.cod_jogo}}">
 
             <button class="">Comprar</button>
 
-            <button>Termos de Compra</button>
-        
         </form>
 
     </section>
