--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -75,6 +75,11 @@ a
     background-color: var(--cinza_claro);
 }
 
+main
+{
+    width: 100%;
+    height: 100%;
+}
 
 
 /* Carrossel */
@@ -147,7 +152,7 @@ a
 .main__games
 {
     width: 100%;
-    height: 1400px;
+    height: 150vh;
 
     margin: 20px auto;
 
@@ -233,8 +238,6 @@ a
 
 .container-sobre-jogo button > a
 {
-    font-size: 20px;
-
     color: var(--branco);
 }
 
