--- a/static/styles/style-pagina_categoria_jogos.css
+++ b/static/styles/style-pagina_categoria_jogos.css
@@ -9,6 +9,9 @@
 /* Corpo geral */
 body 
 {
+    width: 100%;
+    height: 100%;
+
     background-color: var(--preto);
     color: var(--branco);
 }
@@ -34,6 +37,12 @@ a
 {
     color: var(--branco);
     text-decoration: none;
+}
+
+.main
+{
+    width: 100%;
+    height: 100vh;
 }
 
 .main__category
@@ -98,8 +107,7 @@ a
 
 .main__category-container button:hover
 {
-    width: 300px;
-    height: 300px;
+    scale: 1.1;
 }
 
 .main__category-container a
