--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -89,10 +89,14 @@
 
         <form class="main__produto-compra">
 
-            <button class="main__produto-compra-comprar">Comprar</button>
-
-            <button class="main__produto-compra-termos">Termos de Compra</button>
+            <button>Comprar</button>
         
+        </form>
+
+        <form  class="main__produto-termos">
+
+            <button>Termos de Compra</button>
+
         </form>
 
     </section>
@@ -109,11 +113,15 @@
 
             </form>
 
-            <form  action="" class="main__comentario-container-button">
+            <form  action="" class="main__comentario-container-publicar">
 
-                <button class="main__comentario-container-button-publicar">Publicar</button>
-                
-                <button class="main__comentario-container-button-limpar">Limpar</button>
+                <button>Publicar</button>
+
+            </form>
+
+            <form action="" class="main__comentario-container-limpar">
+
+                <button>Limpar</button>
 
             </form>
 
