modify: colocando cada botão para ter um container próprio

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -88,18 +88,21 @@
 
         </div>
 
+        <div class="main__produto-compra">
 
-        <form class="main__produto-compra" action="/carrinho/{{produto.cod_jogo}}">
+            <form class="main__produto-compra-comprar" action="/carrinho/{{produto.cod_jogo}}">
 
-            <button>Comprar</button>
-          
-        </form>
+                <button>Comprar</button>
+            
+            </form>
 
-        <form  class="main__produto-termos">
+            <form  class="main__produto-compra-termos">
 
-            <button>Termos de Compra</button>
+                <button>Termos de Compra</button>
 
-        </form>
+            </form>
+
+        </div>
 
     </section>
 
@@ -115,17 +118,21 @@
 
             </form>
 
-            <form  action="" class="main__comentario-container-publicar">
+            <div class="main__comentario-container-button">
 
-                <button>Publicar</button>
+                <form  action="" class="main__comentario-container-button-publicar">
 
-            </form>
+                    <button>Publicar</button>
 
-            <form action="" class="main__comentario-container-limpar">
+                </form>
 
-                <button>Limpar</button>
+                <form action="" class="main__comentario-container-button-limpar">
 
-            </form>
+                    <button>Limpar</button>
+
+                </form>
+
+            </div>
 
         </div>
 
