CORRECAO DE ERRO

--- a/templates/Pagina_comprar-produto.html
+++ b/templates/Pagina_comprar-produto.html
@@ -55,6 +55,7 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <main class="main">
 
+        <!-- oloco -->
         <!-- PRODUTO -->
         <section class="main__produto">
             <img src="{{ produto.url }}" alt="{{ produto.nome_jogo }}">
